--- a/app/views/houses/index.html.erb
+++ b/app/views/houses/index.html.erb
@@ -1,2 +1,16 @@
-<h1>Houses#index</h1>
-<p>Find me in app/views/houses/index.html.erb</p>
+
+
+<% if current_user.house.nil? %>
+
+<%= turbo_frame_tag do %>
+  <%= render 'form', house: @house %>
+<% end %>
+
+<% else %>
+
+  <h2>
+    <%= current_user.house.name %>
+  </h2>
+
+<% end %>
+
