--- a/app/views/houses/index.html.erb
+++ b/app/views/houses/index.html.erb
@@ -2,15 +2,11 @@
 
 <% if current_user.house.nil? %>
 
-<%= turbo_frame_tag do %>
+<%= turbo_frame_tag 'house_form' do %>
   <%= render 'form', house: @house %>
 <% end %>
 
 <% else %>
-
-  <h2>
-    <%= current_user.house.name %>
-  </h2>
-
+  <%= render 'house_name', house_name: current_user.house.name %>
 <% end %>
 
