--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,8 @@
 
   <body>
     <%= render 'shared/navbar' %>
-    <div class="p-4">
+    <%= turbo_frame_tag 'error_message' %>
+    <div class="p-4 mt-4">
       <%= yield %>
     </div>
   </body>
