--- a/app/views/houses/index.html.erb
+++ b/app/views/houses/index.html.erb
@@ -1,9 +1,10 @@
 
 
-<%= turbo_frame_tag 'house_name' %>
 
 <% if current_user.house.present? %>
     <%= render 'house_name', house_name: current_user.house.name %>
+  <% else %>
+  <%= turbo_frame_tag 'house_name' %>
 <% end %>
 
 <%= turbo_frame_tag 'game' %>
