--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -4,9 +4,16 @@
       <%= link_to current_user.nickname, root_path, class: "navbar-brand"  %>
       <div class="d-flex">
         <%#= render 'shared/friends_request', requests: current_user.pending_invitations %>
+
         <% if current_user.house.blank? %>
-          <%= render 'houses/drop_down', house: @house %>
+            <%= render 'houses/drop_down', house: @house %>
+
+            <% else %>
+            <%= render 'houses/edit_drop_down', house: @house %>
+
         <% end %>
+
+
         <%= button_to "Sign Out", destroy_user_session_path, method: :delete, class: 'btn btn-danger'%>
       </div>
     <%else %>
