Corrected update of message

--- a/app/views/houses/update.turbo_stream.erb
+++ b/app/views/houses/update.turbo_stream.erb
@@ -1,8 +1,8 @@
-  <%= turbo_stream.replace "house_form" do %>
-    <%= turbo_frame_tag 'house_form' do %>
-      <%= render 'houses/edit_drop_down', house: @house %>
-    <% end %>
-  <% end %>
+  <%#= turbo_stream.replace "house_form" do %>
+    <%#= turbo_frame_tag 'house_form' do %>
+      <%#= render 'houses/edit_drop_down', house: @house %>
+    <%# end %>
+  <%# end %>
 
 
     <%#= turbo_stream.replace "house_name" do %>
