--- a/app/views/houses/index.html.erb
+++ b/app/views/houses/index.html.erb
@@ -1,9 +1,9 @@
 
-
-<%= turbo_frame_tag 'house_name' do%>
+<%= turbo_stream_from 'houses' %>
+<%= turbo_frame_tag 'houses' do %>
 
   <% if current_user.house.present? %>
-    <%= render 'house_name', house_name: current_user.house.name %>
+    <%= render @house %>
   <% end %>
 
 <% end %>
