--- a/app/views/houses/_edit_drop_down.html.erb
+++ b/app/views/houses/_edit_drop_down.html.erb
@@ -3,7 +3,7 @@
 
   <div class="dropdown">
     <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
-      Edit a House
+      Edit your House
     </button>
     <ul class="dropdown-menu " aria-labelledby="dropdownMenuButton1">
 
