Adding players to the games

--- a/app/views/games/_form.html.erb
+++ b/app/views/games/_form.html.erb
@@ -1,1 +1,1 @@
-<%= link_to 'Create Game', games_path({id: house.id}), class: green_btn %>
+<%= button_to 'Create Game', games_path({id: house.id}), method: :post, class: green_btn %>
