--- a/app/views/games/create.turbo_stream.erb
+++ b/app/views/games/create.turbo_stream.erb
@@ -1,4 +1,4 @@
-<%= turbo_stream.replace "game" do %>
+<%= turbo_stream.replace "players" do %>
   <%#= turbo_frame_tag 'users' do %>
     <%= render 'games/users' %>
   <%# end %>
