--- a/app/views/houses/index.html.erb
+++ b/app/views/houses/index.html.erb
@@ -1,5 +1,6 @@
 
 <%= turbo_stream_from 'houses' %>
+
 <%= turbo_frame_tag 'houses' do %>
 
   <% if current_user.house.present? %>
@@ -8,17 +9,23 @@
 
 <% end %>
 
+    <% if @house %>
+      <%= turbo_frame_tag 'house_form' do %>
+        <%= render 'edit_drop_down', house: @house %>
+      <% end %>
+
+      <%= render 'games/form', house: @house %>
+    <% else %>
+  <%= turbo_frame_tag 'house_form' do %>
+
+      <%= render 'form', house: @new_house %>
+  <% end %>
+
+    <% end %>
+
+
 
 <%= turbo_frame_tag 'game' do %>
+  
 
-
-<% end %>
-
-
-<%= turbo_frame_tag 'players' do %>
-  <% if @active_game %>
-    <%= render 'games/users' %>
-  <% else %>
-    <%= render 'games/form', house: @house %>
-  <% end %>
 <% end %>
