--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,6 +1,7 @@
 <nav class="navbar navbar-light bg-light">
   <div class="container-fluid px-4">
     <% if user_signed_in? %>
+      <div id='current_user' class=<%= current_user.id %>></div>
       <%= link_to current_user.nickname, edit_user_registration_path, class: 'navbar-brand' %>
       <%= link_to 'Games', games_path, class: 'navbar-brand' %>
       <%= link_to 'House', root_path, class: 'navbar-brand' %>
