Working create edit house

--- a/app/views/houses/_form.html.erb
+++ b/app/views/houses/_form.html.erb
@@ -5,6 +5,6 @@
   </div>
 
   <div class="actions">
-    <%= f.submit "New House", class: blue_btn %>
+    <%= f.submit class: blue_btn%>
   </div>
 <% end %>
