--- a/app/views/houses/show.html.erb
+++ b/app/views/houses/show.html.erb
@@ -1,10 +1,9 @@
 <p style="color: green"><%= notice %></p>
 
-<%= render @house %>
-
+<%= turbo_frame_tag 'edit_house' do %>
+  <%= render @house %>
+  <%= link_to "Edit this house", edit_house_path(@house) %>
+<% end %>
 <div>
-  <%= link_to "Edit this house", edit_house_path(@house) %> |
-  <%= link_to "Back to houses", houses_path %>
 
-  <%= button_to "Destroy this house", @house, method: :delete %>
 </div>
