--- a/app/views/houses/create.turbo_stream.erb
+++ b/app/views/houses/create.turbo_stream.erb
@@ -1,14 +1,14 @@
 
+<%#= turbo_stream.remove "house_form" %>
+
   <%= turbo_stream.replace "house_form" do %>
-    <%= turbo_frame_tag 'house_form' do %>
-    <%= render 'houses/edit_drop_down', house: @house %>
-    <% end %>
+    <%= render 'houses/link', house: @house %>
   <% end %>
 
 
-  <%= turbo_stream.replace "game" do %>
-      <%= render 'games/form', house: @house %>
-  <% end %>
+  <%#= turbo_stream.replace "game" do %>
+      <%#= render 'games/form', house: @house %>
+  <%# end %>
 
 
 
