--- a/app/views/houses/edit.html.erb
+++ b/app/views/houses/edit.html.erb
@@ -1,10 +1,8 @@
 <h1>Editing house</h1>
-
-<%= render "form", house: @house %>
-
+<%= turbo_frame_tag 'edit_house' do %>
+  <%= render "form", house: @house %>
+<% end %>
 <br>
 
 <div>
-  <%= link_to "Show this house", @house %> |
-  <%= link_to "Back to houses", houses_path %>
 </div>
