--- a/app/views/houses/index.html.erb
+++ b/app/views/houses/index.html.erb
@@ -1,24 +1,28 @@
 
 <%= turbo_stream_from 'houses' %>
 
-<%= turbo_frame_tag 'houses' do %>
 
   <% if current_user.house.present? %>
-    <%= render @house %>
-  <% end %>
+  <%= turbo_frame_tag 'houses' do %>
 
-<% end %>
+      <%= render @house %>
+  <% end %>
+  <%= link_to 'Create Game', house_path(@house) %>
+
+    <% end %>
+
+
 
     <% if @house %>
-      <%= turbo_frame_tag 'house_form' do %>
-        <%= render 'edit_drop_down', house: @house %>
-      <% end %>
+      <%#= turbo_frame_tag 'house_form' do %>
+        <%#= render 'edit_drop_down', house: @house %>
+      <%# end %>
 
-      <% if @house.games.blank? %>
-          <%= render 'games/form', house: @house %>
-      <% else %>
-        <%=link_to @house.name, game_path(@game) %>
-      <% end %>
+      <%# if @house.games.blank? %>
+          <%#= render 'games/form', house: @house %>
+      <%# else %>
+        <%#=link_to @house.name, game_path(@game) %>
+      <%# end %>
 
     <% else %>
       <%= turbo_frame_tag 'house_form' do %>
@@ -29,7 +33,7 @@
 
 
 
-<%= turbo_frame_tag 'game' do %>
+<%#= turbo_frame_tag 'game' do %>
   
 
-<% end %>
+<%# end %>
