--- a/app/views/houses/edit.html.erb
+++ b/app/views/houses/edit.html.erb
@@ -1,8 +1,5 @@
 <h1>Editing house</h1>
-<%= turbo_frame_tag 'edit_house' do %>
+<%= turbo_frame_tag 'houses' do %>
   <%= render "form", house: @house %>
 <% end %>
-<br>
 
-<div>
-</div>
