--- a/app/views/houses/_form.html.erb
+++ b/app/views/houses/_form.html.erb
@@ -1,7 +1,7 @@
 <%= form_with(model: house ) do |f| %>
   <div class="field">
     <%= f.label 'House name' %><br />
-    <%= f.text_field :name, autocomplete: "new-name" %>
+    <%= f.text_field :name %>
   </div>
 
   <div class="actions">
