--- a/app/views/houses/_form.html.erb
+++ b/app/views/houses/_form.html.erb
@@ -9,6 +9,4 @@
   </div>
 <% end %>
 
-<% if house.persisted?  %>
-<%= link_to 'Back', houses_path %>
-<% end %>
+<%= link_to 'Back', houses_path if house.persisted? %>
