--- a/app/views/houses/_form.html.erb
+++ b/app/views/houses/_form.html.erb
@@ -6,7 +6,8 @@
 
   <div class="actions mt-2">
     <%= f.submit class: blue_btn%>
+    <%= link_to 'Back', houses_path, class: green_btn if house.persisted? %>
+
   </div>
 <% end %>
 
-<%= link_to 'Back', houses_path if house.persisted? %>
