--- a/app/views/houses/show.html.erb
+++ b/app/views/houses/show.html.erb
@@ -1,8 +1,9 @@
-Players:
+Clickea para q no jueguen:
 
 <%= form_with model: @game do |form| %>
       <%= form.fields_for :players do |f| %>
         <li>
+          <%= f.check_box :_destroy %>
           <%= f.label :player %>
           <%= f.text_field :user_id %>
         </li>
