--- a/app/views/houses/show.html.erb
+++ b/app/views/houses/show.html.erb
@@ -4,8 +4,8 @@ Clickea para q no jueguen:
       <%= form.fields_for :players do |f| %>
         <li>
           <%= f.check_box :_destroy %>
-          <%= f.label :player %>
-          <%= f.text_field :user_id %>
+          <%= f.label f.object.user.nickname %>
+          <%= f.hidden_field :user_id, value: f.object.user_id %>
         </li>
       <% end %>
 
