Added Created games with players

--- a/app/views/houses/create.turbo_stream.erb
+++ b/app/views/houses/create.turbo_stream.erb
@@ -8,5 +8,8 @@
 
 
 
+<%= turbo_stream.replace 'create_game' do %>
+  <%= link_to 'Create Game', house_path(@house), class: green_btn %>
+<% end %>
 
 
