--- a/app/views/houses/show.html.erb
+++ b/app/views/houses/show.html.erb
@@ -10,4 +10,5 @@ Clickea para q no jueguen:
       <% end %>
 
   <%= form.submit class: blue_btn %>
+  <%= link_to 'Back', houses_path, class: blue_btn %>
 <% end %>
