--- a/app/views/games/_player.html.erb
+++ b/app/views/games/_player.html.erb
@@ -1,8 +1,6 @@
-<div>
-  <h4>
-    <%= user.nickname %>
-  </h4>
-  <p>
-  <%= player.winner %>
-  </p>
+<div class="card" style="width: 18rem;">
+  <div class="card-body">
+    <h5 class="card-title"><%= player.user.nickname%></h5>
+    <h4><i class="fa-solid fa-heart"></i> <%= player.lives %></h4>
+  </div>
 </div>
