--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -1,10 +1,3 @@
-<%= turbo_stream_from 'players' %>
-
-<%= turbo_frame_tag 'players' do %>
-
+<% @players.each do |player| %>
+ <%= render 'player', player: player %>
 <% end %>
-
-
-<div data-controller="players">
-
-</div>
