Added game delete btn

--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -1,6 +1,4 @@
 
-<%= turbo_stream_from 'games' %>
-
-<%= turbo_frame_tag 'games' do %>
+<div data-controller="game">
   <%= render @games %>
-<% end %>
+</div>
