--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -1,3 +1,10 @@
+
+<%= button_to 'delete',
+            { controller: "games", action: "destroy", id: @game.id },
+            data: { confirm: 'Are you sure?' },
+            method: :delete,
+            class: red_btn %>
 <% @players.each do |player| %>
  <%= render 'player', player: player %>
 <% end %>
+
