Added button to delete game

--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -1,9 +1,11 @@
 
-<%= button_to 'delete',
+<% if @game_owner %>
+  <%= button_to 'delete',
             { controller: "games", action: "destroy", id: @game.id },
             data: { confirm: 'Are you sure?' },
             method: :delete,
             class: red_btn %>
+  <% end %>
 <% @players.each do |player| %>
  <%= render 'player', player: player %>
 <% end %>
