--- a/app/views/games/_player.html.erb
+++ b/app/views/games/_player.html.erb
@@ -2,5 +2,6 @@
   <div class="card-body">
     <h5 class="card-title"><%= player.user.nickname%></h5>
     <h4><i class="fa-solid fa-heart"></i> <%= player.lives %></h4>
+    <h3> <%= player.position %></h3>
   </div>
 </div>
