--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -15,9 +15,11 @@
     <i class="fa-solid fa-meteor"></i>
   <% end %>
 
+  <%= turbo_stream_from @game, :players %>
+<div id='players'>
   <% @players.each do |player| %>
     <div data-controller="players" data-player-id="<%= player.id %>">
       <%= render 'player', player: player %>
     </div>
   <% end %>
-
+</div>
