--- a/app/views/houses/edit.html.erb
+++ b/app/views/houses/edit.html.erb
@@ -1,4 +1,4 @@
-<%= turbo_frame_tag 'houses' do %>
+<%= turbo_frame_tag dom_id(current_user) do %>
   <%= render "form", house: @house %>
 <% end %>
 
