Corrected form for house

--- a/app/views/houses/_house.html.erb
+++ b/app/views/houses/_house.html.erb
@@ -1,4 +1,4 @@
-<div id="<%= dom_id(house) %>" >
+<div id="<%= dom_id(house.user) %>" >
   <h2>This is the house of <%= house.name %></h2>
 </div>
 
