--- a/app/views/houses/index.html.erb
+++ b/app/views/houses/index.html.erb
@@ -1,10 +1,10 @@
 
 <div class="house__container">
-    <% if @house %>
+    <% if @house.persisted? %>
       <%= render @house %>
       <%= link_to '', edit_house_path(@house), class: edit_btn %>
     <% else %>
-      <%= render 'form', house: @new_house %>
+      <%= render 'form', house: @house %>
     <% end %>
 </div>
 
