--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -17,12 +17,10 @@
 
   <%= turbo_stream_from dom_id @game %>
 
-<%= turbo_frame_tag dom_id @game do %>
-  <% @game.players.each do |player| %>
-    <div data-controller="players" data-player-id="<%= player.id %>">
-
-      <%= render 'players/player', player: player %>
-    </div>
+  <%= turbo_frame_tag dom_id @game do %>
+    <% @game.players.each do |player| %>
+      <div data-controller="players" data-player-id="<%= player.id %>">
+        <%= render @players %>
+      </div>
+    <% end %>
   <% end %>
-    <%#= render @players %>
-<% end %>
