--- a/app/views/games/_kaboom.html.erb
+++ b/app/views/games/_kaboom.html.erb
@@ -2,6 +2,6 @@
   controller: 'players',
   player_id: id,
   action: 'players#kaboom'
-}, class: 'kaboom' do %>
+}, class: 'kaboom text-dark' do %>
   <i class="fa-solid fa-meteor"></i>
 <% end %>
