--- a/app/views/players/_damage_to.html.erb
+++ b/app/views/players/_damage_to.html.erb
@@ -2,6 +2,6 @@
   controller: 'players',
   player_id: id,
   action: 'players#damage_to'
-}, class: 'damage_to' do %>
+}, class: 'damage_to text-danger' do %>
   <i class="fa-solid fa-heart-crack"></i>
 <% end %>
