--- a/app/views/players/_heal.html.erb
+++ b/app/views/players/_heal.html.erb
@@ -2,6 +2,6 @@
   controller: 'players',
   player_id: id,
   action: 'players#heal'
-}, class: 'heal' do %>
+}, class: 'heal text-success' do %>
   <i class="fa-solid fa-heart"></i>
 <% end %>
