--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -4,23 +4,21 @@
 
 <div class="container">
   <div class="row">
-    <div class="col-sm">
+    <div class="col">
       <%= turbo_stream_from dom_id @game %>
       <%= turbo_frame_tag dom_id @game do %>
         <%= render @players %>
       <% end %>
     </div>
-    <div class="col-sm">
+    <div class="col">
       <% if current_user.player.winner %>
           <h2>WINNER</h2>
       <%else %>
         <%= render 'kaboom', id: current_user.player.id %>
       <% end %>
     </div>
-    <div class="col-sm">
-      <% if @game_owner %>
-        <%= render 'delete_game' %>
-      <% end %>
+    <div class="col">
+      <%= render 'delete_game' if @game_owner%>
     </div>
   </div>
 </div>
