--- a/app/views/players/_player.html.erb
+++ b/app/views/players/_player.html.erb
@@ -1,37 +1,36 @@
 <div class="card" id="<%= dom_id player %>" style="width: 18rem;">
   <div class="card-body">
     <% if player.winner %>
-      <h2><%= player.user.nickname %> WON!!!!</h2>
+      <h2><%= player.nickname %> WON!!!!</h2>
       <% else %>
 
       <div class="d-flex align-items-center">
         <h5 class="card-title"><%= player.position%></h5>
-        <h5 class="card-title px-3"><%= player.user.nickname%></h5>
-        <%= render 'players/heal', id: player.id unless player.lives.zero? %>
+        <h5 class="card-title px-3"><%= player.nickname%></h5>
+        <%= render 'players/heal', id: player.id unless player.died? %>
       </div>
 
       <div class="container">
         <div class="row">
+          <% if player.died? %>
+
           <div class="col d-flex align-items-center justify-content-between p-0">
-            <% if player.died? %>
               <p class="lives text-secondary">
                 <i class="fa-sharp fa-solid fa-ghost"></i>
               </p>
-            <% else %>
+          </div>
+          <% else %>
+            <div class="col d-flex align-items-center justify-content-between p-0">
               <%= render 'players/damage_to', id: player.id %>
               <%= render 'players/damage_to_enemies', id: player.id %>
-            <% end %>
-          </div>
+            </div>
           <div class="col text-center">
-            <% unless player.lives.zero? %>
               <p class="px-3 lives text-primary"><%= player.lives %> </p>
-            <% end %>
           </div>
+          <% end %>
+
         </div>
       </div>
-
-
-  <% end %>
-
+    <% end %>
   </div>
 </div>
