--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,22 +1,12 @@
 <nav class="navbar navbar-light bg-light">
   <div class="container-fluid px-4">
     <% if user_signed_in? %>
-      <div id='current_user' class=<%= current_user.id %>></div>
-      <%= link_to current_user.nickname, edit_user_registration_path, class: 'navbar-brand' %>
-      <%= link_to 'Games', games_path, class: 'navbar-brand' %>
-      <%= link_to 'House', root_path, class: 'navbar-brand' %>
-
       <div class="d-flex">
-        <%#= render 'shared/friends_request', requests: current_user.pending_invitations %>
-
-        <%# if current_user.house.blank? %>
-            <%#= render 'houses/drop_down', house: @house %>
-
-            <%# else %>
-            <%#= render 'houses/edit_drop_down', house: @house %>
-
-        <%# end %>
-
+        <%= link_to current_user.nickname, edit_user_registration_path, class: 'navbar-brand' %>
+        <%= link_to 'Games', games_path, class: 'navbar-brand' %>
+        <%= link_to 'House', houses_path, class: 'navbar-brand' %>
+      </div>
+      <div>
         <%= button_to "Sign Out", destroy_user_session_path, method: :delete, class: 'btn btn-danger'%>
       </div>
     <%else %>
