--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -5,6 +5,8 @@
         <%= link_to current_user.nickname, edit_user_registration_path, class: 'navbar-brand' %>
         <%= link_to 'Games', games_path, class: 'navbar-brand' %>
         <%= link_to 'House', houses_path, class: 'navbar-brand' %>
+        <%= link_to 'Statistics', statistics_path, class: 'navbar-brand' %>
+
       </div>
       <div>
         <%= button_to "Sign Out", destroy_user_session_path, method: :delete, class: 'btn btn-danger'%>
