--- a/app/views/players/_damage_to.html.erb
+++ b/app/views/players/_damage_to.html.erb
@@ -3,5 +3,5 @@
   player_id: id,
   action: 'players#damage_to'
 }, class: 'damage_to text-danger' do %>
-  <i class="fa-solid fa-heart-crack"></i>
+  <i class="fa-sharp fa-solid fa-hand-fist"></i>
 <% end %>
