--- a/app/views/players/_damage_to_enemies.html.erb
+++ b/app/views/players/_damage_to_enemies.html.erb
@@ -3,5 +3,5 @@
   player_id: id,
   action: 'players#damage_to_enemies'
 }, class: 'damage_to_enemies' do %>
-  <i class="fa-solid fa-cloud-rain"></i>
+  <i class="fa-solid fa-cloud-bolt"></i>
 <% end %>
