--- a/app/views/games/_game.html.erb
+++ b/app/views/games/_game.html.erb
@@ -1,5 +1,12 @@
 
-<div>
-  Go to
-  <%= link_to game.house.name, game_path(game) %>
+
+<div class="row">
+  <div class="col-sm-6">
+    <div class="card">
+      <div class="card-body">
+        <h5 class="card-title">Go to <%= game.house.name %>'s game</h5>
+        <%= link_to 'Go to Game', game_path(game), class: blue_btn %>
+      </div>
+    </div>
+  </div>
 </div>
