--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="p-2">
   <div class="row">
     <div class="col">
       <%= turbo_stream_from dom_id @game %>
@@ -12,11 +12,7 @@
         <% end %>
     </div>
     <div class="col">
-      <%# if current_user.player.winner %>
-<!--          <h2>WINNER</h2>-->
-      <%#else %>
         <%= render 'kaboom', id: current_user.player.id %>
-      <%# end %>
     </div>
     <div class="col">
       <%= render 'delete_game' if @game_owner%>
