--- a/app/views/statistics/_statistic.html.erb
+++ b/app/views/statistics/_statistic.html.erb
@@ -7,10 +7,14 @@
 
     <p class="card-text">Heal: <%=user.heal %></p>
     <p class="card-text">Wins: <%=user.wins %></p>
-    <p class="card-text">Total_games: <%=user.total_games %></p>
-    <p class="card-text">Total damage<%=user.total_damage %></p>
-    <p class="card-text">Total <%= user.user_killed_most %></p>
+    <p class="card-text">Total_games: <%= user.total_games %></p>
+    <p class="card-text">Total damage: <%= user.total_damage %></p>
+    <% if user.user_killed_most.present? %>
 
-    <% user.user_killed_most %>
+      <% user.user_killed_most.each do |deceased| %>
+        <p>name: <%= deceased[0] %></p>
+        <p>deads: <%= deceased[1] %> </p>
+      <% end %>
+    <% end %>
   </div>
 </div>
