--- a/app/views/statistics/_statistic.html.erb
+++ b/app/views/statistics/_statistic.html.erb
@@ -9,13 +9,13 @@
     <p class="card-text">Wins: <%=user.wins %></p>
     <p class="card-text">Total_games: <%= user.total_games %></p>
     <p class="card-text">Total damage: <%= user.total_damage %></p>
-    <p class="card-text">No of Killed players <%= user.no_kills %></p>
+    <p class="card-text">No of Killed players <%= user.total_kills %></p>
 
     <% if user.death_players.present? %>
 
       <% user.death_players.each do |deceased| %>
         <p>name: <%= deceased[:nickname] %></p>
-        <p>deads: <%= deceased[:deaths] %> </p>
+        <p>deaths: <%= deceased[:deaths] %> </p>
       <% end %>
     <% end %>
   </div>
