--- a/app/views/statistics/_statistic.html.erb
+++ b/app/views/statistics/_statistic.html.erb
@@ -3,20 +3,22 @@
 <div class="card" style="width: 18rem;">
   <div class="card-body">
     <h5 class="card-title"> <%= user.nickname %></h5>
-    <p class="card-text">AoE: <%=user.aoe %></p>
+    <%= pie_chart user.win_rate %>
 
-    <p class="card-text">Heal: <%=user.heal %></p>
-    <p class="card-text">Wins: <%=user.wins %></p>
-    <p class="card-text">Total_games: <%= user.total_games %></p>
-    <p class="card-text">Total damage: <%= user.total_damage %></p>
-    <p class="card-text">No of Killed players <%= user.total_kills %></p>
+<!--    <p class="card-text">AoE: <%#=user.aoe %></p>-->
 
-    <% if user.death_players.present? %>
+<!--    <p class="card-text">Heal: <%#=user.heal %></p>-->
+<!--    <p class="card-text">Wins: <%#=user.wins %></p>-->
+<!--    <p class="card-text">Total_games: <%#= user.total_games %></p>-->
+<!--    <p class="card-text">Total damage: <%#= user.total_damage %></p>-->
+    <p class="card-text">Total Number of Kills <%= user.total_kills %></p>
+    <div>
+      <h5>Who is your bitch?</h5>
+      <%= bar_chart user.death_players, xtitle: "Kills" %>
 
-      <% user.death_players.each do |deceased| %>
-        <p>name: <%= deceased[:nickname] %></p>
-        <p>deaths: <%= deceased[:deaths] %> </p>
-      <% end %>
-    <% end %>
+    </div>
+
+
+
   </div>
 </div>
