--- a/app/views/statistics/index.html.erb
+++ b/app/views/statistics/index.html.erb
@@ -1,10 +1,12 @@
 <div class="d-flex">
-  <%= pie_chart User.group(:nickname).count %>
 <% @users.each do |user| %>
  <%= render 'statistic', user: user %>
 <% end %>
 </div>
-<%= line_chart [
-                 {name: "Workout", data: {"2021-01-01" => 3, "2021-01-02" => 4}},
-                 {name: "Call parents", data: {"2021-01-01" => 5, "2021-01-02" => 3}}
+
+<!--
+<%= bar_chart [
+                 {name: "Workout", data: { "2021-01-02" => 4}},
+                 {name: "Call parents", data: { "2021-01-02" => 3}}
                ] %>
+-->
