--- a/app/views/statistics/_statistic.html.erb
+++ b/app/views/statistics/_statistic.html.erb
@@ -2,7 +2,7 @@
 
 <div class="card" style="width: 18rem;">
   <div class="card-body">
-    <h5 class="card-title"> <%= user.nickname %></h5>
+    <h3 class="card-title"> <%= user.nickname %></h3>
     <%= pie_chart user.win_rate %>
 
 <!--    <p class="card-text">AoE: <%#=user.aoe %></p>-->
@@ -11,14 +11,10 @@
 <!--    <p class="card-text">Wins: <%#=user.wins %></p>-->
 <!--    <p class="card-text">Total_games: <%#= user.total_games %></p>-->
 <!--    <p class="card-text">Total damage: <%#= user.total_damage %></p>-->
-    <p class="card-text">Total Number of Kills <%= user.total_kills %></p>
+    <p class="card-text mt-4">Total Number of Kills <%= user.total_kills %></p>
     <div>
       <h5>Who is your bitch?</h5>
       <%= bar_chart user.death_players, xtitle: "Kills" %>
-
     </div>
-
-
-
   </div>
 </div>
