--- a/app/views/statistics/index.html.erb
+++ b/app/views/statistics/index.html.erb
@@ -1,7 +1,12 @@
 <div class="d-flex">
-
 <% @users.each do |user| %>
  <%= render 'statistic', user: user %>
-
 <% end %>
 </div>
+
+<!--
+<%= bar_chart [
+                 {name: "Workout", data: { "2021-01-02" => 4}},
+                 {name: "Call parents", data: { "2021-01-02" => 3}}
+               ] %>
+-->
