--- a/app/views/houses/_player_form.html.erb
+++ b/app/views/houses/_player_form.html.erb
@@ -6,12 +6,9 @@
         <%= f.object.user.nickname if f.object.user %>
       </h5>
 
-      <%#= f.hidden_field :user_id, value: f.object.user_id %>
-      <%= f.hidden_field :user_id, value: :user_id %>
-
+      <%= f.hidden_field :user_id, value: f.object.user_id %>
       <button type="button" data-action="nested-form#remove" class="btn btn-danger">Remove Player</button>
       <%= f.hidden_field :_destroy %>
-
     </div>
   </div>
 </div>
