--- a/app/views/houses/_player_form.html.erb
+++ b/app/views/houses/_player_form.html.erb
@@ -2,10 +2,10 @@
   <div class="card text-right" style="width: 18rem;">
 
     <div class="card-body">
-      <h5 class="card-title">
-        <%= f.object.user.nickname if f.object.user %>
+      <h5 class="card-title d-flex align-items-center">
+        <%= f.label f.object.user.nickname %>
+        <%= f.select(:position,  (1..size).to_a, {}, class: 'form-select' ) %>
       </h5>
-
       <%= f.hidden_field :user_id, value: f.object.user_id %>
       <button type="button" data-action="nested-form#remove" class="btn btn-danger">Remove Player</button>
       <%= f.hidden_field :_destroy %>
