--- a/app/views/games/_kaboom.html.erb
+++ b/app/views/games/_kaboom.html.erb
@@ -1,7 +1,3 @@
-<%= link_to '', data: {
-  controller: 'players',
-  player_id: id,
-  action: 'players#kaboom'
-}, class: 'kaboom text-dark' do %>
-  <i class="fa-solid fa-meteor"></i>
-<% end %>
+<%= button_to raw("<i class='fa-solid fa-meteor'></i>"),
+              kaboom_players_path({ id: id}),
+              class: red_btn %>
