--- a/app/views/games/_kaboom.html.erb
+++ b/app/views/games/_kaboom.html.erb
@@ -1,3 +1,3 @@
-<%= button_to raw("<i class='fa-solid fa-meteor'></i>"),
+<%= button_to raw(kaboom_icon),
               kaboom_players_path({ id: id}),
               class: red_btn %>
