--- a/app/views/players/_damage_to.html.erb
+++ b/app/views/players/_damage_to.html.erb
@@ -1,3 +1,3 @@
-<%= button_to raw( "<i class='fa-sharp fa-solid fa-hand-fist'></i>"),
+<%= button_to raw(fist_icon),
               damage_to_players_path({ id: id}),
               class: red_btn %>
