--- a/app/views/players/_damage_to_enemies.html.erb
+++ b/app/views/players/_damage_to_enemies.html.erb
@@ -1,3 +1,3 @@
-<%= button_to raw("<i class='fa-solid fa-cloud-bolt'></i>"),
+<%= button_to raw(thunder_icon),
     damage_to_enemies_players_path({ id: id}),
               class: 'btn btn-warning' %>
