--- a/app/views/players/_heal.html.erb
+++ b/app/views/players/_heal.html.erb
@@ -1,3 +1,3 @@
-<%= button_to raw( "<i class='fa-solid fa-heart'></i>"),
+<%= button_to raw(heal_icon),
               heal_players_path({ id: id}),
               class: green_btn %>
