--- a/app/views/statistics/_statistic.html.erb
+++ b/app/views/statistics/_statistic.html.erb
@@ -1,16 +1,9 @@
 
 
-<div class="card" style="width: 18rem;">
+<div class="card my-1" style="width: 18rem;">
   <div class="card-body">
     <h3 class="card-title"> <%= user.nickname %></h3>
     <%= pie_chart user.win_rate %>
-
-<!--    <p class="card-text">AoE: <%#=user.aoe %></p>-->
-
-<!--    <p class="card-text">Heal: <%#=user.heal %></p>-->
-<!--    <p class="card-text">Wins: <%#=user.wins %></p>-->
-<!--    <p class="card-text">Total_games: <%#= user.total_games %></p>-->
-<!--    <p class="card-text">Total damage: <%#= user.total_damage %></p>-->
     <p class="card-text mt-4">Total Number of Kills <%= user.total_kills %></p>
     <div>
       <h5>Who is your bitch?</h5>
