--- a/app/views/statistics/index.html.erb
+++ b/app/views/statistics/index.html.erb
@@ -1,12 +1,7 @@
-<div class="d-flex">
-<% @users.each do |user| %>
- <%= render 'statistic', user: user %>
+<div class="row">
+    <% @users.each do |user| %>
+    <div class="col">
+      <%= render 'statistic', user: user %>
+    </div>
 <% end %>
 </div>
-
-<!--
-<%= bar_chart [
-                 {name: "Workout", data: { "2021-01-02" => 4}},
-                 {name: "Call parents", data: { "2021-01-02" => 3}}
-               ] %>
--->
